<resources>
    <string name="app_name">Canciones</string>
    <string name="texto_canciones"><b>C A N C I O N E S</b></string>

    <!-- MENU TOOLBAR -->
    <string name="favoritas">Favoritas</string>
    <string name="about_me">Acerca de</string>
    <string name="contact">Contacto</string>

    <string name="texto_btn_guardar">Guardar</string>
    <string name="texto_btn_back">Editar</string>

    <string name="texto_titulo"><i>Titulo</i></string>
    <string name="texto_artista"><i>Artista</i></string>
    <string name="texto_genero"><i>Genero</i></string>
    <string name="texto_anio"><i>Año</i></string>
    <string name="texto_calificacion"><i>Calificacion</i></string>

    <string name="saved">La cancion se ha guardado correctamente</string>


    <string name="texto_toast">Por favor, completa los campos para continuar</string>
    <string-array name="generos">
        <item></item>
        <item>Country</item>
        <item>Cumbia</item>
        <item>Electronica</item>
        <item>Hip Hop</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Reggae</item>
        <item>Reggaeton</item>
    </string-array>

    <string name="texto_confirmar"><b>CONFIRMAR DATOS</b></string>

    <!-- ERRORES -->
    <string name="error_titulo">Por favor, ingresa un titulo</string>
    <string name="error_artista">Por favor, ingresa un artista</string>
    <string name="error_genero">Por favor, selecciona un genero</string>
    <string name="error_anio">Por favor, ingresa el año</string>

    <!-- SPLASH -->
    <string name="texto_splash"><b>BIENVENIDO</b></string>
    <string name="texto_version">Version 1.0</string>

    <!-- ACERCA DE -->
    <string name="texto_mi_nombre">Daniel Alonso Lopez</string>
    <string name="texto_bio">"Soy estudiante de la facultad de ingeniería UNAM,         tengo 23 años de edad, actualmente en noveno semestre de la carrera de ingeniería en computación,         este es el ejercicio 2 del taller de Android, desarrollado para la materia optativa de Cómputo Móvil "</string>

    <!-- CONTACTO -->
    <string name="texto_nombre_contacto">Nombre completo</string>
    <string name="texto_correo">Correo electronico</string>
    <string name="texto_mensaje">Mensaje</string>
    <string name="texto_enviar">Enviar</string>

    <!-- FAVORITAS -->
    <string name="total" translatable="false">" / 5.0"</string>
    <string name="seleccion"> Seleccionaste el elemento con ID: \</string>
    <string name="smtp_host" translatable="false">mail.smtp.host</string>
    <string name="smtp_gmail" translatable="false">smtp.gmail.com</string>
    <string name="smtp_socketFactory_port" translatable="false">mail.smtp.socketFactory.port</string>
    <string name="port" translatable="false">465</string>
    <string name="smtp_socketFactory_class" translatable="false">mail.smtp.socketFactory.class</string>
    <string name="net_ssl" translatable="false">javax.net.ssl.SSLSocketFactory</string>
    <string name="smtp_port" translatable="false">mail.smtp.port</string>
    <string name="smtp_auth" translatable="false">mail.smtp.auth</string>
    <string name="auth_true" translatable="false">true</string>
    <string name="espere">Espere por favor</string>
    <string name="enviando">Enviando correo...</string>
    <string name="from" translatable="false">From \</string>
    <string name="body" translatable="false">"  Body: \\"</string>
    <string name="envio_exitoso" translatable="false">Envío exitoso</string>
    <string name="error" translatable="false">Error</string>
    <string name="envio_exitoso_html" translatable="false"><font color='#509324'>Envío exitoso</font></string>
    <string name="envio_correcto">El correo se ha enviado con éxito</string>
    <string name="ok" translatable="false">OK</string>
    <string name="intente_mas_tarde">Algo salió mal, intente más tarde</string>
    <string name="eliminar">Eliminaste elemento con ID: \</string>


</resources>
