 <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCanciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/texto_canciones"
            android:textSize="@dimen/size_texto_titulos" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:hint="@string/texto_titulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField0"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:hint="@string/texto_artista">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etArtista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField00"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:hint="@string/texto_genero">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/spGeneros"
                android:layout_marginTop="@dimen/editText_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:hint="@string/texto_anio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:inputType="number"
                android:maxLines="4"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCalificacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:textSize="@dimen/size_texto_mostrar"
            android:textStyle="italic"
            android:text="@string/texto_calificacion"
            android:layout_marginStart="@dimen/margin_calificacion"/>

     <androidx.appcompat.widget.AppCompatRatingBar
         android:id="@+id/rbCalificacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/editText_vertical_margin"
         android:progressTint="@color/duskYellow"
         android:secondaryProgressTint="@color/duskYellowTransparent"
         android:backgroundTint="@color/lightGrey"
         android:numStars="5"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/editText_vertical_margin"
            android:text="@string/texto_btn_guardar"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="@dimen/radius_button"
            android:focusable="true"
            android:textSize="@dimen/size_texto_mostrar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>