<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:menu="@menu/menu_favoritas">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:text="@string/about_me"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="@dimen/size_texto_titulos" />


    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_texto_mostrar"
        android:text="@string/texto_mi_nombre"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/size_texto_titulos"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_text_view"
        android:textSize="@dimen/size_texto_mostrar"
        android:text="@string/texto_bio" />

</androidx.appcompat.widget.LinearLayoutCompat>